<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mfbuttonicontext"
            android:icon="@drawable/component_icon"
            android:title="@string/menu_mfbuttonicontext" />
        <item
            android:id="@+id/nav_mflabel"
            android:icon="@drawable/component_icon"
            android:title="@string/menu_mfblabel" />
        <item
            android:id="@+id/nav_mfchip"
            android:icon="@drawable/component_icon"
            android:title="@string/menu_mfchip" />
        <item
            android:id="@+id/nav_mfimageview"
            android:icon="@drawable/component_icon"
            android:title="@string/menu_mfimageview" />
        <item
            android:id="@+id/nav_mfmodalbottomsheet"
            android:icon="@drawable/component_icon"
            android:title="@string/menu_mfmodalbottomsheet" />
        <item
            android:id="@+id/nav_mfmaps"
            android:icon="@drawable/component_icon"
            android:title="@string/menu_mfmaps" />
    </group>
</menu>