<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".components.mfmodalbottomsheet.MFTripFinOptions">

    <LinearLayout
        android:id="@+id/mf_trip_fin_options_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="7"
        android:visibility="visible"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:paddingVertical="30sp">
        <com.manoffocus.mfcomponentsnav.components.mfbuttontexticon.MFButtonTextIcon
            android:layout_width="wrap_content"
            android:layout_height="0sp"
            android:layout_weight="2"
            app:mf_label_formattedText="@string/mf_fin_trip_options_label"
            app:mf_label_size="@dimen/mf_label_text_m"
            app:mf_label_color="?attr/primary_variant_text"/>
        <com.manoffocus.mfcomponentsnav.components.mfbuttontexticon.MFButtonTextIcon
            android:id="@+id/mf_trip_fin_option_goto_calification_but"
            android:layout_width="300sp"
            android:layout_height="0sp"
            android:layout_weight="3"
            app:mf_button_text="@string/mf_fin_trip_options_title_goto_calification"
            style="@style/MFButtonTextIcon"
            android:layout_marginVertical="10sp"/>
        <com.manoffocus.mfcomponentsnav.components.mflabel.MFLabel
            android:id="@+id/mf_trip_fin_option_calificate_next_time_but"
            android:layout_width="wrap_content"
            android:layout_height="0sp"
            android:layout_weight="2"
            app:mf_label_formattedText="@string/mf_fin_trip_options_fin_trip_title_calificate_next_time"
            app:mf_label_size="@dimen/mf_label_text_m"
            app:mf_label_color="?attr/secondary_text"
            android:layout_marginTop="10sp"/>
    </LinearLayout>

</FrameLayout>